--- a/site-plan.html
+++ b/site-plan.html
@@ -100,6 +100,7 @@
       <a href="#">Home</a>
       <a href="#">resume</a>
       <a href="#">gallory</a>
+      <a href="#">contact me</a>
     </nav>
     <hr />
     <h2>Site Map</h2>
