--- a/site-plan.html
+++ b/site-plan.html
@@ -121,11 +121,17 @@
 
     <h3>Home</h3>
 
-    <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
+    <img src="images/Home_wireframe.png" alt="wire frame for home"/>
 
-    <h3>resumay</h3>
+    <h3>resume</h3>
 
-    <!-- <img src="#" alt="page 2 wireframe"> -->
+    <img src="images/resuma_wirframe.png" alt="wire frame for resume"/>
+
+    <h3>gallory</h3>
+
+    <img src="images/gallory_wireframe.png" alt="wire frame gallory"/>
+
+
   </main>
 </body>
 
