--- a/galory.html
+++ b/galory.html
@@ -14,7 +14,7 @@
         <li>
             <a href="index.html">About Me</a>
             <a href="resume.html">Resume</a>
-            <a href="galorie.html">galorie</a>
+            <a href="galory.html">galorie</a>
             <a href="projects.html">projects</a>
         </li>
     </head>
