ok even more fixed now

--- a/resume.html
+++ b/resume.html
@@ -12,10 +12,10 @@
     <head id="Head">
         <a id="Logolink" href="index.html"><img src="images/C3_LOGO.png" alt="The C3_LOGO"></a>
         <li>
-            <a href="index.html">About Me</a>
-            <a href="resume.html">Resume</a>
-            <a href="galorie.html">galorie</a>
-            <a href="projects.html">projects</a>
+          <a href="index.html">About Me</a>
+          <a href="resume.html">Resume</a>
+          <a href="galory.html">galorie</a>
+          <a href="projects.html">projects</a>
         </li>
     </head>
     <!-- next section-->
