--- a/index.html
+++ b/index.html
@@ -9,14 +9,12 @@
 <body>
 <div id="HomeContent" class="content">
 
-    <head id="Head">
+    <head id="HeadGrid">
         <a id="Logolink" href="index.html"><img src="images/C3_LOGO.png" alt="The C3_LOGO"></a>
-        <li>
-            <a href="index.html">About Me</a>
-            <a href="resume.html">Resume</a>
-            <a href="galory.html">galory</a>
-            <a href="projects.html">projects</a>
-        </li>
+        <a id="aboutMeP" href="index.html">About Me</a>
+        <a id="resumeP" href="resume.html">Resume</a>
+        <a id="galoryP"href="galory.html">galory</a>
+        <a id="projectP" href="projects.html">projects</a>
     </head>
     <!-- next section-->
 
