OKOK this one is done sorry for the late one

--- a/index.html
+++ b/index.html
@@ -4,60 +4,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
-    <title> Home of the Fuad </title>
+    <title> Home of The Fuad </title>
 </head>
 <body>
 <div id="HomeContent" class="content">
 
-    <head id="HeadGrid">
+    <header>
+        <nav>
         <a id="Logolink" href="index.html"><img src="images/C3_LOGO.png" alt="The C3_LOGO"></a>
         <a id="aboutMeP" href="index.html">About Me</a>
         <a id="resumeP" href="resume.html">Resume</a>
-        <a id="galoryP"href="galory.html">galory</a>
-        <a id="projectP" href="projects.html">projects</a>
-    </head>
+        <a id="galoryP" href="galory.html">Galory</a>
+        <a id="projectP" href="projects.html">Projects</a>
+        </nav>
+    </header>
     <!-- next section-->
 
     <!-- Continue-->
-    <main id="HomeMain">
-        <h1> My life My Purpsoe </h1>
-        <div>
-            <p>qeirueqwi90qdwfueif</p>
-            <img src="images/20210702_080004.jpg" alt="my slef with family">
+    <main>
+        <div id="imgDiv">
+            <img src="images/Me_and_grandma.jpg" alt="my slef with grammy">
         </div>
         <section>
             <div>
                 <img src="images/Passing_routs - Copy.png" alt="black gray and whight abstract -- tree and fog forest structure">
                 <h1>My Passion</h1>
                 <P>apwofjpweofnnwpeonfweofnqweoweonfwpfn</P>
-                <P>wpoejnfqpwofnpwojfnqwpojfnqwpojfnqwpj</P>
+                <P>wpoejnfqpwofnpwojfnqwpojfnqwpojfnqwpj</P> 
             </div>
         </section>
     </main>
     <!-- next section-->
 
     <!-- continue-->
-    <footer id="HomeFooter">
-        <ul>
-            <li><img src="https://picsum.photos/320/240"></li>
-            <li><P>You can fine me on these sightes</P></li>
-            <li>
-            <a href="https://facebook.com" target="_blank">
+    <footer>
+        <p> My Ganon-Fuad Life &copy; 2023 - Fuad J Torres </p>
+        <p><a href="site-plan.html">Site Plan</a></p>
+        <p><a href="contactus.html">Contact and Form </a></p>
+        <div class="social">
+            <a href="https://facebook.com" target="_blank"> <!-- target="_blank"-->>
                 <img src="images/facebook.png" alt="fb icon">
             </a>
-            </li>
-            <li>
             <a href="https://twitter.com" target="_blank">
-                <img src="images/twitter.png" alt="twitter icon">
+                <img src="images/Xtwitter.jpg" alt="twitter icon">
             </a>
-            </li>
-            <li>
             <a href="https://instagram.com" target="_blank">
                 <img src="images/instagram.png" alt="instagram icon">
             </a>
-            </li>
-        </ul>
+        </div>
     </footer>
+
 </div>
 </body>
 </html>
