--- a/site-plan.html
+++ b/site-plan.html
@@ -127,7 +127,7 @@
 
     <img src="images/resuma_wirframe.png" alt="wire frame for resume"/>
 
-    <h3>gallory</h3>
+    <h3>Projects</h3> <!-- this is renamed projects after relising the gallory is not so usfull in the sights purpose-->
 
     <img src="images/gallory_wireframe.png" alt="wire frame gallory"/>
 
