--- a/resume.html
+++ b/resume.html
@@ -11,12 +11,12 @@
 
   <header>
     <nav>
-    <a id="Logolink" href="index.html"><img src="images/C3_LOGO.png" alt="The C3_LOGO"></a>
-    <a id="aboutMeP" href="index.html">About Me</a>
-    <a id="resumeP" href="resume.html">Resume</a>
-    <a id="galoryP" href="galory.html">Galory</a>
-    <a id="projectP" href="projects.html">Projects</a>
-    </nav>
+      <a id="Logolink" href="index.html"><img src="images/C3_LOGO.png" alt="The C3_LOGO"></a>
+      <a id="aboutMeP" href="index.html">About Me</a>
+      <a id="resumeP" href="resume.html">Resume</a>
+      <a id="galoryP" href="site-plan.html">Galory</a>
+      <a id="projectP" href="projects.html">Projects</a>
+      </nav>
 </header>
     <!-- next section-->
       <div class="slideshow-container">
