--- a/site-plan.html
+++ b/site-plan.html
@@ -97,9 +97,9 @@
     <h3>Navigation</h3>
     <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
     <nav>
-      <a href="#">Home</a>
-      <a href="#">resume</a>
-      <a href="#">gallory</a>
+      <a href="index.html">Home</a>
+      <a href="resume.html">resume</a>
+      <a href="projects.html">projects</a>
     </nav>
     <hr />
     <h2>Site Map</h2>
