--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
             <div>
                 <img src="images/Passing_routs - Copy.png" alt="black gray and whight abstract -- tree and fog forest structure">
                 <h1>My Passion My Purpose</h1>
-                <P>apwofjpweofnnwpeonfweofnqweoweonfwpfn</P>
-                <P>wpoejnfqpwofnpwojfnqwpojfnqwpojfnqwpj</P> 
-                <p>qeirueqwi90qdwfueif</p>
+                <P>To help the world by gathering all the information needed to succeed.</P>
+                <P>Ill do this by observing all the information there is to know about all the topics associated with Freedom and simplify them for the average man.</P> 
+                <p>This web site should guide the view to these works or if the viewer wants to be a part of these conversations leaves comments in the “Contact and Form” section.</p>
             </div>
         </section>
     </main>
