--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@
     <a id="Logolink" href="index.html"><img src="images/C3_LOGO.png" alt="The C3_LOGO"></a>
     <a id="aboutMeP" href="index.html">About Me</a>
     <a id="resumeP" href="resume.html">Resume</a>
-    <a id="galoryP" href="site-plan.html">Galory</a>
+    <a id="galoryP" href="galory.html">Galory</a>
     <a id="projectP" href="projects.html">Projects</a>
     </nav>
 </header>
@@ -32,7 +32,7 @@
           <div class="ProjectsSlides">
           <img class="MSI" src="images/pexels-shvets-production-7203724.jpg"> 
           <div class="MSP">
-            <h2> Gathering Info For My Book </h2><p> UGYH JOIUB YVFTY GUHB NBH VUH IJK NJH VGCyg YYGHU IJBH VTFYG UHIJ UGYHJ OIU B YVFTY GUHBN HVUHI JKNJ HVGCy g YYGHUI JBHVTF YGUHIJ UGYHJ OIUB YVFTYG UHBNBHVUHI JKNJH VGCyg YY GHUIJB HVTF YGUHIJ UGYH JOIUBY VFTY GUHBNB HVUHIJ KNJ HVGCyg YYG HU IJBHVT FYGU HIJ UGYH JOIUBYVF TYG UH BNBH U HIJKN JHVG Cyg YYGHUI JBHVT FYG UHIJ UG YHJOI UBY VFTYGUH BNB HVUH IJKNJH VGCyg YYGHU IJBHV TFYGUHIJ UGYHJ OIUBY VFTYG UHB NBHVUH IJKNJHV GCyg YYG H UIJBHVTF YGUHIJ UGYH JOIUB YVFTYG UHBNB HVUHIJKN JHVGCyg YYG HUIJB HVT FYGUHIJ UGY HJOI U BYV FT YGU HBNB HVUH IJKNJHVGCyg YYG HUIJ BHVTF YGU HIJ UGYHJ OIUBY VFTY GUHB NBHV UHI JKNJHVGCyg YYGH UIJBH VTFYGU H IJ UGYHJO IU BYVF TYGU HB</p>
+            <h2> Gathering Info For My Book </h2><p> One of the biggest problems I think this world has been a worship of ideals and a submission to the culture of the devil. Even in the church I see this want to be like the lusters of God but not God. I see people who believe in The Stone but take the sticks and palm leaves from the sand to building huts when they could be build strong mansions. <br> To many people submit to there biases and no longer work by the spirit. Because of this People have been leaving the church. It is said that if people teach their children in the ways of the truth, they will never depart from it (Proverbs 22:6). So why are they departing? Somehow, they DO NOT teach TRUTH; they teach bias limitation and the spirit of the devil.</p>
           </div>
           </div> 
         </div>
@@ -41,7 +41,7 @@
           <div class="ProjectsSlides">
           <img class="MSI" src="images/pexels-andrea-piacquadio-3755440.jpg">
           <div class="MSP">
-            <h2> Family Team Work Plan </h2><p> UGYH JOIUB YVFTY GUHB NBH VUH IJK NJH VGCyg YYGHU IJBH VTFYG UHIJ UGYHJ OIU B YVFTY GUHBN HVUHI JKNJ HVGCy g YYGHUI JBHVTF YGUHIJ UGYHJ OIUB YVFTYG UHBNBHVUHI JKNJH VGCyg YY GHUIJB HVTF YGUHIJ UGYH JOIUBY VFTY GUHBNB HVUHIJ KNJ HVGCyg YYG HU IJBHVT FYGU HIJ UGYH JOIUBYVF TYG UH BNBH U HIJKN JHVG Cyg YYGHUI JBHVT FYG UHIJ UG YHJOI UBY VFTYGUH BNB HVUH IJKNJH VGCyg YYGHU IJBHV TFYGUHIJ UGYHJ OIUBY VFTYG UHB NBHVUH IJKNJHV GCyg YYG H UIJBHVTF YGUHIJ UGYH JOIUB YVFTYG UHBNB HVUHIJKN JHVGCyg YYG HUIJB HVT FYGUHIJ UGY HJOI U BYV FT YGU HBNB HVUH IJKNJHVGCyg YYG HUIJ BHVTF YGU HIJ UGYHJ OIUBY VFTY GUHB NBHV UHI JKNJHVGCyg YYGH UIJBH VTFYGU H IJ UGYHJO IU BYVF TYGU HB</p>
+            <h2> World Team Work Plan </h2><p> UGYH JOIUB YVFTY GUHB NBH VUH IJK NJH VGCyg YYGHU IJBH VTFYG UHIJ UGYHJ OIU B YVFTY GUHBN HVUHI JKNJ HVGCy g YYGHUI JBHVTF YGUHIJ UGYHJ OIUB YVFTYG UHBNBHVUHI JKNJH VGCyg YY GHUIJB HVTF YGUHIJ UGYH JOIUBY VFTY GUHBNB HVUHIJ KNJ HVGCyg YYG HU IJBHVT FYGU HIJ UGYH JOIUBYVF TYG UH BNBH U HIJKN JHVG Cyg YYGHUI JBHVT FYG UHIJ UG YHJOI UBY VFTYGUH BNB HVUH IJKNJH VGCyg YYGHU IJBHV TFYGUHIJ UGYHJ OIUBY VFTYG UHB NBHVUH IJKNJHV GCyg YYG H UIJBHVTF YGUHIJ UGYH JOIUB YVFTYG UHBNB HVUHIJKN JHVGCyg YYG HUIJB HVT FYGUHIJ UGY HJOI U BYV FT YGU HBNB HVUH IJKNJHVGCyg YYG HUIJ BHVTF YGU HIJ UGYHJ OIUBY VFTY GUHB NBHV UHI JKNJHVGCyg YYGH UIJBH VTFYGU H IJ UGYHJO IU BYVF TYGU HB</p>
           </div>
         </div>
         </div>
@@ -50,7 +50,7 @@
           <div class="ProjectsSlides">
           <img class="MSI" src="images/pexels-cottonbro-studio-6590920.jpg">
           <div class="MSP">
-            <h2> Food Storage Plan </h2><p> UGYH JOIUB YVFTY GUHB NBH VUH IJK NJH VGCyg YYGHU IJBH VTFYG UHIJ UGYHJ OIU B YVFTY GUHBN HVUHI JKNJ HVGCy g YYGHUI JBHVTF YGUHIJ UGYHJ OIUB YVFTYG UHBNBHVUHI JKNJH VGCyg YY GHUIJB HVTF YGUHIJ UGYH JOIUBY VFTY GUHBNB HVUHIJ KNJ HVGCyg YYG HU IJBHVT FYGU HIJ UGYH JOIUBYVF TYG UH BNBH U HIJKN JHVG Cyg YYGHUI JBHVT FYG UHIJ UG YHJOI UBY VFTYGUH BNB HVUH IJKNJH VGCyg YYGHU IJBHV TFYGUHIJ UGYHJ OIUBY VFTYG UHB NBHVUH IJKNJHV GCyg YYG H UIJBHVTF YGUHIJ UGYH JOIUB YVFTYG UHBNB HVUHIJKN JHVGCyg YYG HUIJB HVT FYGUHIJ UGY HJOI U BYV FT YGU HBNB HVUH IJKNJHVGCyg YYG HUIJ BHVTF YGU HIJ UGYHJ OIUBY VFTY GUHB NBHV UHI JKNJHVGCyg YYGH UIJBH VTFYGU H IJ UGYHJO IU BYVF TYGU HB</p>
+            <h2> World Food Storage Plan </h2><p> UGYH JOIUB YVFTY GUHB NBH VUH IJK NJH VGCyg YYGHU IJBH VTFYG UHIJ UGYHJ OIU B YVFTY GUHBN HVUHI JKNJ HVGCy g YYGHUI JBHVTF YGUHIJ UGYHJ OIUB YVFTYG UHBNBHVUHI JKNJH VGCyg YY GHUIJB HVTF YGUHIJ UGYH JOIUBY VFTY GUHBNB HVUHIJ KNJ HVGCyg YYG HU IJBHVT FYGU HIJ UGYH JOIUBYVF TYG UH BNBH U HIJKN JHVG Cyg YYGHUI JBHVT FYG UHIJ UG YHJOI UBY VFTYGUH BNB HVUH IJKNJH VGCyg YYGHU IJBHV TFYGUHIJ UGYHJ OIUBY VFTYG UHB NBHVUH IJKNJHV GCyg YYG H UIJBHVTF YGUHIJ UGYH JOIUB YVFTYG UHBNB HVUHIJKN JHVGCyg YYG HUIJB HVT FYGUHIJ UGY HJOI U BYV FT YGU HBNB HVUH IJKNJHVGCyg YYG HUIJ BHVTF YGU HIJ UGYHJ OIUBY VFTY GUHB NBHV UHI JKNJHVGCyg YYGH UIJBH VTFYGU H IJ UGYHJO IU BYVF TYGU HB</p>
           </div>
           </div>
         </div>
