--- a/resume.html
+++ b/resume.html
@@ -14,7 +14,7 @@
       <a id="Logolink" href="index.html"><img src="images/C3_LOGO.png" alt="The C3_LOGO"></a>
       <a id="aboutMeP" href="index.html">About Me</a>
       <a id="resumeP" href="resume.html">Resume</a>
-      <a id="galoryP" href="site-plan.html">Galory</a>
+      <a id="galoryP" href="galory.html">Galory</a>
       <a id="projectP" href="projects.html">Projects</a>
       </nav>
 </header>
