--- a/site-plan.html
+++ b/site-plan.html
@@ -98,8 +98,9 @@
     <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
     <nav>
       <a href="index.html">Home</a>
-      <a href="resume.html">resume</a>
-      <a href="projects.html">projects</a>
+      <a href="resume.html">Resume</a>
+      <a href="projects.html">Projects</a>
+      <a href="galory.html">Galory</a>
     </nav>
     <hr />
     <h2>Site Map</h2>
