--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,7 @@
           <div class="ProjectsSlides">
           <img class="MSI" src="images/pexels-andrea-piacquadio-3755440.jpg">
           <div class="MSP">
-            <h2> World Team Work Plan </h2><p> UGYH JOIUB YVFTY GUHB NBH VUH IJK NJH VGCyg YYGHU IJBH VTFYG UHIJ UGYHJ OIU B YVFTY GUHBN HVUHI JKNJ HVGCy g YYGHUI JBHVTF YGUHIJ UGYHJ OIUB YVFTYG UHBNBHVUHI JKNJH VGCyg YY GHUIJB HVTF YGUHIJ UGYH JOIUBY VFTY GUHBNB HVUHIJ KNJ HVGCyg YYG HU IJBHVT FYGU HIJ UGYH JOIUBYVF TYG UH BNBH U HIJKN JHVG Cyg YYGHUI JBHVT FYG UHIJ UG YHJOI UBY VFTYGUH BNB HVUH IJKNJH VGCyg YYGHU IJBHV TFYGUHIJ UGYHJ OIUBY VFTYG UHB NBHVUH IJKNJHV GCyg YYG H UIJBHVTF YGUHIJ UGYH JOIUB YVFTYG UHBNB HVUHIJKN JHVGCyg YYG HUIJB HVT FYGUHIJ UGY HJOI U BYV FT YGU HBNB HVUH IJKNJHVGCyg YYG HUIJ BHVTF YGU HIJ UGYHJ OIUBY VFTY GUHB NBHV UHI JKNJHVGCyg YYGH UIJBH VTFYGU H IJ UGYHJO IU BYVF TYGU HB</p>
+            <h2> World Team Work Plan </h2><p> This is simple, but the getting rid of the pride and the idle worship of the world is the problem. There are people who know what to do and all the other people must do is follow and empower them who know what to do. The ones who know what to do, know that they do not actually know what to do but they are willing to accept that they are wrong and gather the wholeness of what to do. <br> How to solve the idle worship and pride of the world I do not know but ill share links here when I have them. Also be powerful so that the devil cannot get a rich man to come kill who ever like they did President Nicson. https://www.youtube.com/@Timcast</p>
           </div>
         </div>
         </div>
@@ -50,7 +50,7 @@
           <div class="ProjectsSlides">
           <img class="MSI" src="images/pexels-cottonbro-studio-6590920.jpg">
           <div class="MSP">
-            <h2> World Food Storage Plan </h2><p> UGYH JOIUB YVFTY GUHB NBH VUH IJK NJH VGCyg YYGHU IJBH VTFYG UHIJ UGYHJ OIU B YVFTY GUHBN HVUHI JKNJ HVGCy g YYGHUI JBHVTF YGUHIJ UGYHJ OIUB YVFTYG UHBNBHVUHI JKNJH VGCyg YY GHUIJB HVTF YGUHIJ UGYH JOIUBY VFTY GUHBNB HVUHIJ KNJ HVGCyg YYG HU IJBHVT FYGU HIJ UGYH JOIUBYVF TYG UH BNBH U HIJKN JHVG Cyg YYGHUI JBHVT FYG UHIJ UG YHJOI UBY VFTYGUH BNB HVUH IJKNJH VGCyg YYGHU IJBHV TFYGUHIJ UGYHJ OIUBY VFTYG UHB NBHVUH IJKNJHV GCyg YYG H UIJBHVTF YGUHIJ UGYH JOIUB YVFTYG UHBNB HVUHIJKN JHVGCyg YYG HUIJB HVT FYGUHIJ UGY HJOI U BYV FT YGU HBNB HVUH IJKNJHVGCyg YYG HUIJ BHVTF YGU HIJ UGYHJ OIUBY VFTY GUHB NBHV UHI JKNJHVGCyg YYGH UIJBH VTFYGU H IJ UGYHJO IU BYVF TYGU HB</p>
+            <h2> World Prep And Storage Plan </h2><p> This will take time, but I am done with paying taxes to people who use it to buy chips and kill themselves with smokes. We need structures that allow people to be self-reliant, not allow them to get fat off taxes. I know the picture is about volunteering at food bank but immediate relief structures are not what I’m talking about. It’s the short-term structures that people allow to be long term structures that bother me. <br> Some how we need to get people to work and become self-reliant not just money wise but collectively wise. If most neighbors did not prep for disaster there is every reason to come and take from those who do. Obviously the first step is to bring back community gatherings and strengthening. Ill post links to places that are to improve the culture war: https://www.youtube.com/@Timcast.</p>
           </div>
           </div>
         </div>
