--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,8 @@
           <div class="ProjectsSlides">
           <img class="MSI" src="images/pexels-shvets-production-7203724.jpg"> 
           <div class="MSP">
-            <h2> Gathering Info For My Book </h2><p> One of the biggest problems I think this world has been a worship of ideals and a submission to the culture of the devil. Even in the church I see this want to be like the lusters of God but not God. I see people who believe in The Stone but take the sticks and palm leaves from the sand to building huts when they could be build strong mansions. <br> To many people submit to there biases and no longer work by the spirit. Because of this People have been leaving the church. It is said that if people teach their children in the ways of the truth, they will never depart from it (Proverbs 22:6). So why are they departing? Somehow, they DO NOT teach TRUTH; they teach bias limitation and the spirit of the devil.</p>
+            <h2> Gathering Info For My Book </h2><p> One of the biggest problems I think this world has been a worship of ideals and a submission to the culture of the devil. Even in the church I see this want to be like the lusters of God but not God. I see people who believe in The Stone but take the sticks and palm leaves from the sand to building huts when they could be build strong mansions. <br>
+               To many people submit to there biases and no longer work by the spirit. Because of this People have been leaving the church. It is said that if people teach their children in the ways of the truth, they will never depart from it (Proverbs 22:6). So why are they departing? Somehow, they DO NOT teach TRUTH; they teach bias limitation and the spirit of the devil.</p>
           </div>
           </div> 
         </div>
@@ -41,7 +42,8 @@
           <div class="ProjectsSlides">
           <img class="MSI" src="images/pexels-andrea-piacquadio-3755440.jpg">
           <div class="MSP">
-            <h2> World Team Work Plan </h2><p> This is simple, but the getting rid of the pride and the idle worship of the world is the problem. There are people who know what to do and all the other people must do is follow and empower them who know what to do. The ones who know what to do, know that they do not actually know what to do but they are willing to accept that they are wrong and gather the wholeness of what to do. <br> How to solve the idle worship and pride of the world I do not know but ill share links here when I have them. Also be powerful so that the devil cannot get a rich man to come kill who ever like they did President Nicson. https://www.youtube.com/@Timcast</p>
+            <h2> World Team Work Plan </h2><p> This is simple, but the getting rid of the pride and the idle worship of the world is the problem. There are people who know what to do and all the other people must do is follow and empower them who know what to do. The ones who know what to do, know that they do not actually know what to do but they are willing to accept that they are wrong and gather the wholeness of what to do. <br>
+               How to solve the idle worship and pride of the world I do not know but ill share links here when I have them. Also be powerful so that the devil cannot get a rich man to come kill who ever like they did President Nicson. https://www.youtube.com/@Timcast</p>
           </div>
         </div>
         </div>
@@ -50,7 +52,8 @@
           <div class="ProjectsSlides">
           <img class="MSI" src="images/pexels-cottonbro-studio-6590920.jpg">
           <div class="MSP">
-            <h2> World Prep And Storage Plan </h2><p> This will take time, but I am done with paying taxes to people who use it to buy chips and kill themselves with smokes. We need structures that allow people to be self-reliant, not allow them to get fat off taxes. I know the picture is about volunteering at food bank but immediate relief structures are not what I’m talking about. It’s the short-term structures that people allow to be long term structures that bother me. <br> Some how we need to get people to work and become self-reliant not just money wise but collectively wise. If most neighbors did not prep for disaster there is every reason to come and take from those who do. Obviously the first step is to bring back community gatherings and strengthening. Ill post links to places that are to improve the culture war: https://www.youtube.com/@Timcast.</p>
+            <h2> World Prep And Storage Plan </h2><p> This will take time, but I am done with paying taxes to people who use it to buy chips and kill themselves with smokes. We need structures that allow people to be self-reliant, not allow them to get fat off taxes. I know the picture is about volunteering at food bank but immediate relief structures are not what I’m talking about. It’s the short-term structures that people allow to be long term structures that bother me.</p><br>
+            <p>Some how we need to get people to work and become self-reliant not just money wise but collectively wise. If most neighbors did not prep for disaster there is every reason to come and take from those who do. Obviously the first step is to bring back community gatherings and strengthening. Ill post links to places that are to improve the culture war: https://www.youtube.com/@Timcast.</p>
           </div>
           </div>
         </div>
